# 2022-Problems

./: #int#  .gitignore  .gitignore~  Arnav's File System.md  CMakeLists.txt  Ez Ez Problems By Davin.md  Hiking Yifan.md  House Cup.md  Interference Pattern.md  More Easy Problems by Davin.md  Problems by Yifan.md  README.md  Race.md  Walking to School.md  Walking_to_School.cpp  Yifan's Hopping Game.md  brutetest.sh  compile_codes.sh  data_gen_walk2school  gen_data.sh  int
author_solutions/: antigravity.cpp  bashymath.cpp  battleship.cpp  doodlejump.cpp  exec  friendship.cpp  groceryshopping.cpp  helloworld.cpp  hopscotch.cpp  input  knishop.cpp  lineup.cpp  scoretracker.cpp  startrek.cpp  walktoschool.cpp
data_generators/: data_gen  data_gen_antigravityboot.cpp  data_gen_bashymath.cpp  data_gen_battleship.cpp  data_gen_doodlejump.cpp  data_gen_friendship.cpp  data_gen_grocery.cpp  data_gen_hopscotch.cpp  data_gen_knishop.cpp  data_gen_lineup.cpp  data_gen_passwordguess.cpp  data_gen_race  data_gen_startrek.cpp  data_gen_walk2school.cpp  data_gen_walktoschool.cpp
tester_solutions/: antigravity.cpp  antigravityboot.cpp  bashymath.cpp  battleship.cpp  exec  friendship1_michael.cpp  friendship2.cpp  friendship2_michael.cpp  input  knishop.cpp  lineup.cpp  passwordguess.cpp  startrek_tester.cpp  walktoschool.cpp
